--- a/.github/workflows/trial.yml
+++ b/.github/workflows/trial.yml
@@ -12,9 +12,8 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Echo start message
-        shell: bash
-        run: |
-          echo start workflow!
+        shell: cmd
+        run: echo start workflow!
